APP-3590 Fix dark mode (#136)
* APP-3590 Fix dark mode

* APP-3590 Added dark theme class

* Fix color modal

* Remove useless code

* Remove dedault color class

--- a/stories/stories.scss
+++ b/stories/stories.scss
@@ -35,7 +35,3 @@ html {
     width: 5%;
 }
 
-.tk-tag-remove:hover {
-    background-color: #3e4249;
-    color: #eaebec;
-}
